syntax = "proto3";
package sm.v1;
option go_package = "github.com/roofn/secure-messenger/server/internal/gen/sm/v1;smv1";
import "common.proto";


service Directory {
  rpc ListUsers(Empty) returns (ListUsersResponse);
  rpc GetUser(UserId) returns (UserProfile);
  rpc RotateDevice(RotateDeviceRequest) returns (Device);
  rpc RevokeDevice(RevokeDeviceRequest) returns (Device);
}


message UserProfile {
string user_id = 1;
string display_name = 2;
repeated Device devices = 3;
}


message Device {
  string device_id = 1;
  bytes device_cert_der = 2;
  bool revoked = 3;
}


message RotateDeviceRequest {
  string user_id = 1;
  string device_id = 2;
  bytes new_device_cert_der = 3;
}


message RevokeDeviceRequest {
  string user_id = 1;
  string device_id = 2;
}


message ListUsersResponse { repeated UserProfile users = 1; }
